--- a/manifest.json
+++ b/manifest.json
@@ -5,17 +5,17 @@
     {
       "src": "2sites\twee\images\tablogo.png",
       "sizes": "96x96",
-      "type": "image/gif"
+      "type": "image/png"
     },
     {
       "src": "2sites\twee\images\tablogo.png",
       "sizes": "144x144",
-      "type": "image/gif"
+      "type": "image/png"
     },
     {
       "src": "2sites\twee\images\tablogo.png",
       "sizes": "192x192",
-      "type": "image/gif"
+      "type": "image/png"
     }
   ],
   "start_url": "index.html",
