--- a/manifesta.json
+++ b/manifesta.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "INDEX",
-  "name": "INDEX",
-    "icons": [
+  "short_name": "wout corijn",
+  "name": "wout corijn",
+  "icons": [
     {
-      "src": "images/favicon.png",
+      "src": "2sites\twee\images\tablogo.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "images/favicon.png",
+      "src": "2sites\twee\images\tablogo.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "images/favicon.png",
+      "src": "2sites\twee\images\tablogo.png",
       "sizes": "192x192",
       "type": "image/png"
     }
