--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "wout corijn",
-  "name": "wout corijn",
-  "icons": [
+  "short_name": "Wout Corijn",
+  "name": "Wout Corijn",
+    "icons": [
     {
       "src": "2sites\twee\images\tablogo.png",
       "sizes": "96x96",
